feat(UTS): Jobsheet: 07 - Tugas

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME="Dokoni Store"
 APP_ENV=local
 APP_KEY=base64:uHNEzXA9PbU5fyf+PdHO31mNd7S0ebnnE+qqDQDTRmo=
 APP_DEBUG=true
